fix: use JDK8-compat List/Map factories in backport tests